--- a/section1.css
+++ b/section1.css
@@ -360,7 +360,7 @@ body {
     gap: 15px;
     justify-content: center;
     background-color: var(--mainbright);
-    background-image: linear-gradient(45deg, transparent, var(--main2), transparent);
+    background-image: linear-gradient(45deg, transparent, var(--mainbright), transparent);
     margin-top: 15px;
     padding: 15px;
     border-radius: 10px;
@@ -368,12 +368,19 @@ body {
 
 .social .socialicon {
     position: relative;
+    transition: 0.4s;
 }
 
 .social .discord a i,
 section.four .discord {
     color: rgb(81, 131, 238);
 
+}
+
+.social .socialicon:hover,
+.social .socialicon:hover {
+
+    transform: translate(0, -15%);
 }
 
 .social .youtube a i {
@@ -398,11 +405,14 @@ section.four .discord {
 
 }
 
+
+
 .social .discord::before,
 .social .insta::before,
 .social .bbb::before,
 .social .youtube::before,
-.social .github::before {
+.social .github::before,
+nav .logo .avaliable::before {
     content: attr(hoverMSG);
     font-size: 16px;
 
